syntax = "proto3";
package sunrise.fee.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/sunriselayer/sunrise/x/fee/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.equal) = true;
  option (amino.name) = "sunrise/fee/Params";

  string fee_denom = 1;
  string burn_denom = 2;
  string burn_ratio = 3 [(cosmos_proto.scalar) = "cosmos.Dec"];
  uint64 burn_pool_id = 4;
  bool burn_enabled = 5;
}
